kubernetes/apps/base/printing/obico/ingress.yaml
# Obico Server Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obico-server
  namespace: printing
  labels:
    app.kubernetes.io/name: obico-server
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - obico.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: obico.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obico-server
                port:
                  number: 80
